examples-generated/application/gateway.yaml
apiVersion: application.azure.jet.crossplane.io/v1alpha1
kind: Gateway
metadata:
  name: example
spec:
  forProvider:
    backendAddressPool:
    - name: ${local.backend_address_pool_name}
    backendHttpSettings:
    - cookieBasedAffinity: Disabled
      name: ${local.http_setting_name}
      path: /path1/
      port: 80
      protocol: Http
      requestTimeout: 60
    frontendIpConfiguration:
    - name: ${local.frontend_ip_configuration_name}
      publicIpAddressId: ${azurerm_public_ip.example.id}
    frontendPort:
    - name: ${local.frontend_port_name}
      port: 80
    gatewayIpConfiguration:
    - name: my-gateway-ip-configuration
      subnetId: ${azurerm_subnet.frontend.id}
    httpListener:
    - frontendIpConfigurationName: ${local.frontend_ip_configuration_name}
      frontendPortName: ${local.frontend_port_name}
      name: ${local.listener_name}
      protocol: Http
    location: West Europe
    name: example-appgateway
    requestRoutingRule:
    - backendAddressPoolName: ${local.backend_address_pool_name}
      backendHttpSettingsName: ${local.http_setting_name}
      httpListenerName: ${local.listener_name}
      name: ${local.request_routing_rule_name}
      ruleType: Basic
    resourceGroupName: ${azurerm_resource_group.example.name}
    sku:
    - capacity: 2
      name: Standard_Small
      tier: Standard
  providerConfigRef:
    name: example
